--- a/VCD_Wave/Views/Home/Index.cshtml
+++ b/VCD_Wave/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
         .caret-down::before {
             -ms-transform: rotate(90deg); /* IE 9 */
             -webkit-transform: rotate(90deg); /* Safari */
-            ' transform: rotate(90deg);
+             transform: rotate(90deg);
         }
 
         .nested {
