--- a/VCD_Wave/Views/Home/Index.cshtml
+++ b/VCD_Wave/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model VCD_Wave.Models.Wave
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Home Page";
     var lst = Model.module.lstmodule;
 
@@ -11,10 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <link href="~/css/split.css" rel="stylesheet" />
     <style>
         ul, #myUL {
             list-style-type: none;
@@ -43,7 +41,7 @@
         .caret-down::before {
             -ms-transform: rotate(90deg); /* IE 9 */
             -webkit-transform: rotate(90deg); /* Safari */
-             transform: rotate(90deg);
+            transform: rotate(90deg);
         }
 
         .nested {
@@ -56,58 +54,54 @@
     </style>
 </head>
 <body>
-
-    @if (lst != null && lst.Count != 0)
-    {
-        <ul id="myUL">
-            @{
-                void GetTreeView(List<VCD_Wave.Models.mod_vcd_Modules> siteMenu, long parentID)
+    <section id="content">
+        <div class="hsplit" id="left">
+            <div class="vsplit" id="rtop">
+                @if (lst != null && lst.Count != 0)
                 {
-                    foreach (var item in siteMenu.Where(a => a.scopeparentid.Equals(parentID)).OrderBy(x=>x.scopeparentid))
-                    {
-                        var submenu = siteMenu.Where(a => a.scopeparentid.Equals(item.scopecounter)).Count();
-                        <li>
-                            <span class="@(submenu>0?"caret":"")">@item.scopename</span>
-                            @if (submenu > 0)
+                    <ul id="myUL">
+                        @{
+                            void GetTreeView(List<VCD_Wave.Models.mod_vcd_Modules> siteMenu, long parentID)
                             {
-                                <ul class="nested">
-                                    @{GetTreeView(siteMenu,item.scopecounter);}
-                                </ul>
+                                foreach (var item in siteMenu.Where(a => a.scopeparentid.Equals(parentID)).OrderBy(x => x.scopeparentid))
+                                {
+                                    var submenu = siteMenu.Where(a => a.scopeparentid.Equals(item.scopecounter)).Count();
+                                    <li>
+                                        <span class="@(submenu>0?"caret":"")">@item.scopename</span>
+                                        @if (submenu > 0)
+                                        {
+                                            <ul class="nested">
+                                                @{GetTreeView(siteMenu, item.scopecounter);}
+                                            </ul>
+                                        }
+                                    </li>
+                                }
                             }
-                        </li>
-                    }
-                }
-                GetTreeView(lst,lst[0].scopeparentid);
-            }
-        </ul>
-    }
-    @*<li>
-            <span class="caret">Beverages</span>
-            <ul class="nested">
-                <li>Water</li>
-                <li>Coffee</li>
-                <li>
-                    <span class="caret">Tea</span>
-                    <ul class="nested">
-                        <li>Black Tea</li>
-                        <li>White Tea</li>
-                        <li>
-                            <span class="caret">Green Tea</span>
-                            <ul class="nested">
-                                <li>Sencha</li>
-                                <li>Gyokuro</li>
-                                <li>Matcha</li>
-                                <li>Pi Lo Chun</li>
-                            </ul>
-                        </li>
+                            GetTreeView(lst, lst[0].scopeparentid);
+                        }
                     </ul>
-                </li>
-            </ul>
-        </li>*@
+                }
+            </div>
+            <div class="vsplit" id="rbot">
+                <pre id="wordTwoText">Word 2</pre>
+            </div>
+        </div>
+        <div class="hsplit" id="right">
+            <div class="hsplit" id="lmiddle">
+                <div id="wordFourText">Word 3</div>
+            </div>
+            <div class="hsplit" id="mmiddle">
+                <div id="wordFourText">Word 4</div>
+            </div>
 
+        </div>
+    </section>
+    
 
 </body>
 </html>
+<script src="~/js/split.min.js"></script>
+<script src="~/js/script.js"></script>
 <script>
     var toggler = document.getElementsByClassName("caret");
     var i;
